[gd_scene load_steps=19 format=2]

[ext_resource path="res://MidPanel-Sheet.png" type="Texture" id=1]
[ext_resource path="res://TopPanel-Sheet.png" type="Texture" id=2]
[ext_resource path="res://Timer-Sheet.png" type="Texture" id=3]
[ext_resource path="res://BotPanel-Sheet.png" type="Texture" id=4]
[ext_resource path="res://UI.gd" type="Script" id=5]
[ext_resource path="res://JumpChip.png" type="Texture" id=6]
[ext_resource path="res://WheelChip.png" type="Texture" id=7]
[ext_resource path="res://GunChip.png" type="Texture" id=8]

[sub_resource type="Animation" id=2]
resource_name = "dead"
length = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("SlotSet/ControlBot/SlotBot:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "green"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SlotSet/ControlBot/SlotBot:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 2 ]
}

[sub_resource type="Animation" id=4]
resource_name = "red"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SlotSet/ControlBot/SlotBot:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 3, 4 ]
}

[sub_resource type="Animation" id=5]
resource_name = "dead"
length = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("../../SlotSet/ControlMid/SlotMid:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "green"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../../SlotSet/ControlMid/SlotMid:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 2 ]
}

[sub_resource type="Animation" id=7]
resource_name = "red"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../../SlotSet/ControlMid/SlotMid:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 3, 4 ]
}

[sub_resource type="Animation" id=8]
resource_name = "dead"
length = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("../../SlotSet/ControlTop/SlotTop:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=9]
resource_name = "green"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../../SlotSet/ControlTop/SlotTop:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 2 ]
}

[sub_resource type="Animation" id=10]
resource_name = "red"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../../SlotSet/ControlTop/SlotTop:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 3, 4 ]
}

[sub_resource type="Animation" id=1]
resource_name = "timer"
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("Timer:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 0 ]
}

[node name="UI" type="Control"]
script = ExtResource( 5 )

[node name="SlotSet" type="Control" parent="."]

[node name="ControlBot" type="Control" parent="SlotSet"]

[node name="SlotBot" type="Sprite" parent="SlotSet/ControlBot"]
position = Vector2( 40, 61.5 )
texture = ExtResource( 4 )
vframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="SlotSet/ControlBot"]
root_node = NodePath("../../..")
anims/dead = SubResource( 2 )
anims/green = SubResource( 3 )
anims/red = SubResource( 4 )

[node name="ControlMid" type="Control" parent="SlotSet"]

[node name="SlotMid" type="Sprite" parent="SlotSet/ControlMid"]
position = Vector2( 40, 47 )
texture = ExtResource( 1 )
vframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="SlotSet/ControlMid"]
root_node = NodePath("../../../ChipSet/ControlMid2")
anims/dead = SubResource( 5 )
anims/green = SubResource( 6 )
anims/red = SubResource( 7 )

[node name="ControlTop" type="Control" parent="SlotSet"]

[node name="SlotTop" type="Sprite" parent="SlotSet/ControlTop"]
position = Vector2( 40, 31 )
texture = ExtResource( 2 )
vframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="SlotSet/ControlTop"]
root_node = NodePath("../../../ChipSet/ControlTop2")
anims/dead = SubResource( 8 )
anims/green = SubResource( 9 )
anims/red = SubResource( 10 )

[node name="ChipSet" type="Control" parent="."]

[node name="ControlBot2" type="Control" parent="ChipSet"]
visible = false

[node name="SlotBot" type="Sprite" parent="ChipSet/ControlBot2"]
position = Vector2( 45.5, 66 )
texture = ExtResource( 8 )

[node name="ControlMid2" type="Control" parent="ChipSet"]
visible = false

[node name="SlotMid" type="Sprite" parent="ChipSet/ControlMid2"]
position = Vector2( 45.5, 47 )
texture = ExtResource( 6 )

[node name="ControlTop2" type="Control" parent="ChipSet"]
visible = false

[node name="SlotTop" type="Sprite" parent="ChipSet/ControlTop2"]
position = Vector2( 45.5, 28 )
texture = ExtResource( 7 )

[node name="Timer" type="Control" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Timer"]
autoplay = "timer"
anims/timer = SubResource( 1 )

[node name="Timer" type="Sprite" parent="Timer"]
position = Vector2( 15, 45 )
texture = ExtResource( 3 )
vframes = 11

[connection signal="animation_finished" from="Timer/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
